--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+@media screen and (max-width: 991px) {
+  .navbar-logo-barger {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+}
