--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,7 +1,7 @@
 $white: #ffffff;
-$green1: #0caa7d;
-$green2: #0ca57a;
-$red: #fb1004;
+$green1: #95C1D0;
+$green2: #95C1D0;
+$red: #2596BE;
 $black: #000000;
 
 @mixin main-font {
@@ -565,7 +565,7 @@ a:focus {
 
 // contact section
 .contact_section {
-  background-color: #0ca57a;
+  background-color: #95C1D0;
   color: #fff;
   background-size: cover;
   background-repeat: no-repeat;
