--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,7 +59,7 @@ body {
   right: -15px;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
-  background-color: #fb1004;
+  background-color: #2596BE;
   border-radius: 100%;
 }
 
@@ -78,7 +78,7 @@ body {
 }
 
 .header_section .active a {
-  color: #0caa7d !important;
+  color: #186781 !important;
 }
 
 .header_section .call_btn {
@@ -201,7 +201,7 @@ a:focus {
 .slider_section .detail-box a {
   display: inline-block;
   padding: 10px 45px;
-  background-color: #fb1004;
+  background-color: #2596BE;
   color: #ffffff;
   border-radius: 0;
   margin-top: 15px;
@@ -233,7 +233,7 @@ a:focus {
 
 .carousel-control-prev,
 .carousel-control-next {
-  background-color: #0caa7d;
+  background-color: #186781;
   background-repeat: no-repeat;
   background-size: 10px;
   background-position: center;
@@ -243,7 +243,7 @@ a:focus {
 
 .carousel-control-prev:hover,
 .carousel-control-next:hover {
-  background-color: #fb1004;
+  background-color: #2596BE;
 }
 
 .carousel-control-prev {
@@ -270,7 +270,7 @@ a:focus {
 }
 
 .custom_menu-container {
-  background-color: #0caa7d;
+  background-color: #186781;
 }
 
 .custom_menu-container .custom_menu {
@@ -335,7 +335,7 @@ a:focus {
 .about_section .detail-box a {
   display: inline-block;
   padding: 12px 45px;
-  background-color: #fb1004;
+  background-color: #2596BE;
   color: #ffffff;
   border-radius: 10px;
   margin-top: 25px;
@@ -360,11 +360,11 @@ a:focus {
 }
 
 .do_section .content-box.bg-red {
-  background-color: #fb1004;
+  background-color: #2596BE;
 }
 
 .do_section .content-box.bg-green {
-  background-color: #0ca57a;
+  background-color: #186781;
 }
 
 .skill_section {
@@ -501,7 +501,7 @@ a:focus {
 
 .client_section .client_box .client-id .name h5 {
   text-transform: uppercase;
-  color: #0caa7d;
+  color: #186781;
   font-weight: bold;
 }
 
@@ -527,7 +527,7 @@ a:focus {
 }
 
 .contact_section {
-  background-color: #0ca57a;
+  background-color: #186781;
   color: #fff;
   background-size: cover;
   background-repeat: no-repeat;
@@ -612,7 +612,7 @@ a:focus {
 }
 
 .info_links ul .active::before {
-  background-color: #0caa7d;
+  background-color: #186781;
 }
 
 .info_links ul li {
@@ -648,7 +648,7 @@ a:focus {
 }
 
 .info_form button {
-  background-color: #0caa7d;
+  background-color: #186781;
   padding: 8px 35px;
   outline: none;
   border: none;
